# Cryptocore-

./: .gitignore  Cargo.toml  READMe.md  structudre.md
src/: error.rs  lib.rs  main.rs
src/cli/: config.rs  mod.rs
src/core/: mod copy.rs
src/core/crypto/: aes.rs  mod.rs  traits.rs
src/core/crypto/modes/: cbc.rs  cfb.rs  ctr.rs  mod.rs  ofb.rs
src/core/io/: mod.rs
src/types/: operation.rs
tests/: integration_tests.rs  tests.rs
